# formal

./: CMakeLists.txt
src/: DFA.cpp  DFA.h  NFA.cpp  NFA.h  automata.cpp  main.cpp  methods.h
tests/: tests.cpp  text_create_fromString.txt  text_create_fromString2.txt
